--- a/MyCity4Kids/MyCity4Kids/res/layout/add_article_video_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_article_video_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_above="@+id/uploadVideoTextView"
-        android:layout_alignLeft="@+id/writeArticleImageView"
+        android:layout_alignRight="@+id/writeArticleImageView"
         android:layout_marginBottom="10dp"
         android:background="@drawable/circular_image_bg"
         android:scaleType="center"
@@ -40,8 +40,8 @@
         android:layout_above="@+id/becomeBloggerTextView"
         android:layout_alignEnd="@+id/becomeBloggerTextView"
         android:layout_alignRight="@+id/becomeBloggerTextView"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:background="@drawable/circular_image_bg"
         android:scaleType="center"
         android:src="@drawable/ic_write_white"
@@ -55,8 +55,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="80dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
         android:layout_marginTop="10dp"
         android:text="@string/add_article_or_video.write_article"
         android:textColor="@color/white"
@@ -70,8 +70,8 @@
         android:layout_above="@+id/becomeBloggerTextView"
         android:layout_alignEnd="@+id/becomeBloggerTextView"
         android:layout_alignRight="@+id/becomeBloggerTextView"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:background="@drawable/circular_image_bg"
         android:scaleType="center"
         android:src="@drawable/ic_become_a_bloger"
