--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_rate_app.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_rate_app.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -17,73 +19,101 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/rateus_bg_">
+                android:background="@color/white">
 
-                <TextView
+                <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="15dp"
-                    android:text="Rate our app?"
-                    android:textColor="@color/white_color"
-                    android:textSize="21dp" />
+                    android:text="@string/rate_us.dialog.title"
+                    android:textColor="@color/rate_us.dialog.title"
+                    android:textSize="27sp"
+                    app:fontName="oswald_regular.ttf" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="180dp"
+                    android:layout_height="150dp"
                     android:layout_below="@+id/text"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="15dp"
                     android:src="@drawable/rateus_" />
-
             </RelativeLayout>
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="sans-serif"
-                android:gravity="left|center"
-                android:lineSpacingExtra="1.6dp"
-                android:padding="10dp"
-                android:text="@string/rate_description"
-                android:textColor="@color/new_grey"
-                android:textSize="13dp" />
-
-            <LinearLayout
+            <com.mycity4kids.widget.CustomFontTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:gravity="right"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:text="@string/rate_us.dialog.message1"
+                android:textColor="@color/rate_us.dialog.message"
+                android:textSize="18sp"
+                app:fontName="oswald.ttf" />
 
-                <TextView
+            <com.mycity4kids.widget.CustomFontTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="4dp"
+                android:text="@string/rate_us.dialog.message2"
+                android:textColor="@color/rate_us.dialog.message"
+                android:textSize="18sp"
+                app:fontName="oswald.ttf" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/light_grey1" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <View
+                    android:id="@+id/separator"
+                    android:layout_width="1dp"
+                    android:layout_height="40dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@color/light_grey1" />
+
+                <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/not_now"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:gravity="right"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_toLeftOf="@+id/separator"
+                    android:gravity="center"
                     android:padding="5dp"
-                    android:text="NOT NOW"
-                    android:textColor="@color/new_grey"
-                    android:textSize="14dp" />
+                    android:text="@string/rate_us.dialog.not_now"
+                    android:textColor="@color/rate_us.dialog.not_now"
+                    android:textSize="14sp"
+                    app:fontName="oswald.ttf" />
 
-                <TextView
+                <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/rate_now"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_toRightOf="@+id/separator"
+                    android:gravity="center"
                     android:padding="5dp"
-                    android:text="RATE NOW"
-                    android:textColor="@color/new_blue"
-                    android:textSize="14dp" />
+                    android:text="@string/rate_now"
+                    android:textColor="@color/rate_us.dialog.rate_now"
+                    android:textSize="14sp"
+                    app:fontName="oswald.ttf" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
 
