--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -536,6 +536,7 @@
                     android:drawableTop="@drawable/ic_facebook"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.facebook"
+                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
                     android:textSize="11sp" />
 
@@ -547,6 +548,7 @@
                     android:drawableTop="@drawable/ic_whats_app"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.whatsapp"
+                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
                     android:textSize="11sp" />
 
@@ -558,6 +560,7 @@
                     android:drawableTop="@drawable/ic_email"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.email"
+                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
                     android:textSize="11sp" />
 
@@ -569,6 +572,7 @@
                     android:drawableTop="@drawable/ic_bookmark"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.bookmark"
+                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
                     android:textSize="11sp" />
 
@@ -580,6 +584,7 @@
                     android:drawableTop="@drawable/ic_recommend"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.like"
+                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
                     android:textSize="11sp" />
 
