--- a/MyCity4Kids/MyCity4Kids/res/layout/blog_setup_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blog_setup_activity.xml
@@ -96,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_below="@+id/toolbar"
-                android:background="@color/blog_setup.underline" />
+                android:background="@color/light_underline" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/getStartedTextView"
@@ -119,7 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_below="@+id/getStartedTextView"
-                android:background="@color/blog_setup.underline" />
+                android:background="@color/light_underline" />
         </RelativeLayout>
 
         <ScrollView
@@ -181,7 +181,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignRight="@+id/blogTitleEditText"
                     android:layout_below="@+id/blogTitleEditText"
-                    android:text="120/150"
+                    android:text=""
                     android:textColor="@color/blog_setup.blog_title_desc"
                     android:textSize="15sp"
                     app:fontName="oswald.ttf" />
@@ -192,7 +192,7 @@
                     android:layout_height="1dp"
                     android:layout_below="@+id/blogTitleCharCountTV"
                     android:layout_marginTop="38dp"
-                    android:background="@color/blog_setup.underline" />
+                    android:background="@color/light_underline" />
 
 
                 <com.mycity4kids.widget.CustomFontTextView
@@ -244,7 +244,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignRight="@+id/aboutSelfEditText"
                     android:layout_below="@+id/aboutSelfEditText"
-                    android:text="120/150"
+                    android:text=""
                     android:textColor="@color/blog_setup.blog_title_desc"
                     android:textSize="15sp"
                     app:fontName="oswald.ttf" />
@@ -255,7 +255,7 @@
                     android:layout_height="1dp"
                     android:layout_below="@+id/aboutSelfWordCountTV"
                     android:layout_marginTop="38dp"
-                    android:background="@color/blog_setup.underline" />
+                    android:background="@color/light_underline" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/profilePicLabelTV"
@@ -311,7 +311,7 @@
                     android:layout_height="1dp"
                     android:layout_below="@+id/profilePicImageView"
                     android:layout_marginTop="4dp"
-                    android:background="@color/blog_setup.underline" />
+                    android:background="@color/light_underline" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/detailsLabelTextView"
@@ -364,7 +364,7 @@
                     android:layout_below="@+id/cityTextView"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
-                    android:background="@color/blog_setup.underline" />
+                    android:background="@color/light_underline" />
 
                 <com.mycity4kids.widget.CustomFontEditText
                     android:id="@+id/phoneEditText"
@@ -374,7 +374,7 @@
                     android:layout_marginLeft="28dp"
                     android:layout_marginRight="28dp"
                     android:layout_marginTop="10dp"
-                    android:backgroundTint="@color/blog_setup.underline"
+                    android:backgroundTint="@color/light_underline"
                     android:drawablePadding="10dp"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp"
