--- a/MyCity4Kids/MyCity4Kids/res/layout/user_draft_article_list_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_draft_article_list_item.xml
@@ -82,7 +82,10 @@
         android:layout_alignBottom="@+id/deleteDraftImageView"
         android:layout_alignEnd="@+id/view10"
         android:layout_alignRight="@+id/view10"
-        android:padding="4dp"
+        android:paddingBottom="4dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="12dp"
+        android:paddingTop="4dp"
         android:text="@string/user_article.draft.edit"
         android:textColor="@color/user_articles.draft.edit"
         android:textSize="11sp"
