--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -190,11 +190,19 @@
                 android:ellipsize="end"
                 android:minHeight="1000dp" />
 
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/articleWebView"
+                app:adSize="BANNER"
+                app:adUnitId="@string/ad.adunit_id" />
+
             <RelativeLayout
                 android:id="@+id/tagsLayoutContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/articleWebView"
+                android:layout_below="@+id/adView"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="4dp"
                 android:visibility="visible">
@@ -402,35 +410,57 @@
                 android:background="#f2f2f2" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/commentsHeading"
-                android:layout_width="wrap_content"
+                android:id="@+id/viewCommentsTextView"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trendingArticles"
-                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/follow_topic_author_bg"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:paddingBottom="12dp"
                 android:paddingLeft="10dp"
-                android:text="@string/ad.comments.title"
-                android:textColor="@color/ad.comment.title"
-                android:textSize="@dimen/ad_comments_heading"
-                android:visibility="gone"
+                android:paddingRight="10dp"
+                android:paddingTop="12dp"
+                android:text="@string/ad.comments.view_comment"
+                android:textColor="@color/follower_following_list.following_label"
+                android:textSize="16sp"
                 app:fontName="oswald_regular.ttf" />
 
-            <LinearLayout
-                android:id="@+id/commnetLout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/commentsHeading"
-                android:minHeight="5dp"
-                android:orientation="vertical"
-                android:padding="5dp">
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/commentsHeading"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/trendingArticles"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:paddingLeft="10dp"-->
+            <!--android:text="@string/ad.comments.title"-->
+            <!--android:textColor="@color/ad.comment.title"-->
+            <!--android:textSize="@dimen/ad_comments_heading"-->
+            <!--android:visibility="gone"-->
+            <!--app:fontName="oswald_regular.ttf" />-->
 
-                <!-- <add comment dynamically> -->
-            </LinearLayout>
+            <!--<LinearLayout-->
+            <!--android:id="@+id/commnetLout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/commentsHeading"-->
+            <!--android:minHeight="5dp"-->
+            <!--android:orientation="vertical"-->
+            <!--android:padding="5dp">-->
+
+            <!--&lt;!&ndash; <add comment dynamically> &ndash;&gt;-->
+            <!--</LinearLayout>-->
 
             <TextView
                 android:id="@+id/bottomSpacingTextView"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:layout_below="@+id/commnetLout" />
+                android:layout_below="@+id/viewCommentsTextView" />
         </RelativeLayout>
     </com.mycity4kids.observablescrollview.ObservableScrollView>
 
@@ -536,9 +566,9 @@
                     android:drawableTop="@drawable/ic_facebook"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.facebook"
-                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"
+                    app:fontName="oswald.ttf" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/whatsappShareTextView"
@@ -548,21 +578,22 @@
                     android:drawableTop="@drawable/ic_whats_app"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.whatsapp"
-                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"
+                    app:fontName="oswald.ttf" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/emailShareTextView"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
-                    android:drawableTop="@drawable/ic_email"
+                    android:drawableTint="#507cbe"
+                    android:drawableTop="@drawable/ic_share_white"
                     android:gravity="center"
-                    android:text="@string/ad.bottom_bar.email"
-                    app:fontName="oswald.ttf"
+                    android:text="@string/ad.bottom_bar.generic_share"
                     android:textColor="@color/ad.bottom_bar.items"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"
+                    app:fontName="oswald.ttf" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/bookmarkTextView"
@@ -572,9 +603,9 @@
                     android:drawableTop="@drawable/ic_bookmark"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.bookmark"
-                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"
+                    app:fontName="oswald.ttf" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/likeTextView"
@@ -584,9 +615,9 @@
                     android:drawableTop="@drawable/ic_recommend"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.like"
-                    app:fontName="oswald.ttf"
                     android:textColor="@color/ad.bottom_bar.items"
-                    android:textSize="11sp" />
+                    android:textSize="11sp"
+                    app:fontName="oswald.ttf" />
 
             </LinearLayout>
         </LinearLayout>
