--- a/MyCity4Kids/MyCity4Kids/res/layout/vlogs_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/vlogs_detail_activity.xml
@@ -313,35 +313,64 @@
                     android:background="#f2f2f2" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/commentsHeading"
-                android:layout_width="wrap_content"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/trendingArticles"
+                android:layout_marginTop="5dp"
+                android:background="#f2f2f2" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/viewCommentsTextView"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trendingArticles"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/follow_topic_author_bg"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:paddingBottom="12dp"
                 android:paddingLeft="10dp"
-                android:text="COMMENTS"
-                android:textColor="@color/primary_blue"
-                android:textSize="@dimen/ad_comments_heading" />
+                android:paddingRight="10dp"
+                android:paddingTop="12dp"
+                android:text="@string/ad.comments.view_comment"
+                android:textColor="@color/follower_following_list.following_label"
+                android:textSize="16sp"
+                app:fontName="oswald_regular.ttf" />
 
-            <LinearLayout
-                android:id="@+id/commnetLout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/commentsHeading"
-                android:minHeight="5dp"
-                android:orientation="vertical"
-                android:padding="5dp">
+            <!--<TextView-->
+                <!--android:id="@+id/commentsHeading"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@+id/trendingArticles"-->
+                <!--android:layout_marginBottom="5dp"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:paddingLeft="10dp"-->
+                <!--android:text="COMMENTS"-->
+                <!--android:textColor="@color/primary_blue"-->
+                <!--android:textSize="@dimen/ad_comments_heading" />-->
 
-                <!-- <add comment dynamically> -->
-            </LinearLayout>
+            <!--<LinearLayout-->
+                <!--android:id="@+id/commnetLout"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@+id/commentsHeading"-->
+                <!--android:minHeight="5dp"-->
+                <!--android:orientation="vertical"-->
+                <!--android:padding="5dp">-->
+
+                <!--&lt;!&ndash; <add comment dynamically> &ndash;&gt;-->
+            <!--</LinearLayout>-->
 
             <TextView
                 android:id="@+id/bottomSpacingTextView"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:layout_below="@+id/commnetLout" />
+                android:layout_below="@+id/viewCommentsTextView" />
         </RelativeLayout>
     </com.mycity4kids.observablescrollview.ObservableScrollView>
 
