--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -411,7 +411,7 @@
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/viewCommentsTextView"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trendingArticles"
                 android:layout_marginEnd="20dp"
@@ -464,19 +464,20 @@
         </RelativeLayout>
     </com.mycity4kids.observablescrollview.ObservableScrollView>
 
-    <com.getbase.floatingactionbutton.FloatingActionButton
-        android:id="@+id/commentFloatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_Lout"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="12dp"
-        android:layout_marginRight="17dp"
-        app:fab_colorNormal="@color/ad.fab.bg"
-        app:fab_colorPressed="@color/ad.fab.bg"
-        app:fab_icon="@drawable/ic_add_comments"
-        app:fab_plusIconColor="@color/white_color"
-        app:fab_size="normal" />
+    <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
+        <!--android:id="@+id/commentFloatingActionButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_above="@+id/bottom_Lout"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginBottom="12dp"-->
+        <!--android:layout_marginRight="17dp"-->
+        <!--android:visibility="gone"-->
+        <!--app:fab_colorNormal="@color/ad.fab.bg"-->
+        <!--app:fab_colorPressed="@color/ad.fab.bg"-->
+        <!--app:fab_icon="@drawable/ic_add_comments"-->
+        <!--app:fab_plusIconColor="@color/white_color"-->
+        <!--app:fab_size="normal" />-->
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/swipeNextTextView"
