--- a/MyCity4Kids/MyCity4Kids/res/layout/add_article_video_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_article_video_fragment.xml
@@ -8,41 +8,13 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/uploadVideoImageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_above="@+id/uploadVideoTextView"
-        android:layout_alignRight="@+id/writeArticleImageView"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/circular_image_bg"
-        android:scaleType="center"
-        android:src="@drawable/ic_ulpload_video_icon" />
-
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/uploadVideoTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/suggestedTopicImageView"
-        android:layout_alignEnd="@+id/becomeBloggerTextView"
-        android:layout_alignLeft="@+id/becomeBloggerTextView"
-        android:layout_alignRight="@+id/becomeBloggerTextView"
-        android:layout_alignStart="@+id/becomeBloggerTextView"
-        android:layout_marginBottom="25dp"
-        android:gravity="center"
-        android:text="@string/add_article_or_video.upload_video"
-        android:textColor="@color/white"
-        app:fontName="oswald.ttf" />
-
-    <ImageView
         android:id="@+id/suggestedTopicImageView"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="10dp"
         android:layout_above="@+id/suggestedTopicTextView"
-        android:layout_alignEnd="@+id/becomeBloggerTextView"
-        android:layout_alignRight="@+id/becomeBloggerTextView"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_alignEnd="@+id/uploadVideoImageView"
+        android:layout_alignRight="@+id/uploadVideoImageView"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/circular_image_bg"
         android:scaleType="center"
         android:src="@drawable/ic_suggested_topics"
@@ -52,12 +24,12 @@
         android:id="@+id/suggestedTopicTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/writeArticleImageView"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_above="@+id/writeArticleImageView"
         android:layout_marginBottom="25dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:text="@string/add_article_or_video.suggested_topic"
         android:textColor="@color/white"
         android:visibility="visible"
@@ -67,11 +39,9 @@
         android:id="@+id/writeArticleImageView"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_above="@+id/becomeBloggerTextView"
-        android:layout_alignEnd="@+id/becomeBloggerTextView"
-        android:layout_alignRight="@+id/becomeBloggerTextView"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_above="@+id/writeArticleTextView"
+        android:layout_alignEnd="@+id/uploadVideoImageView"
+        android:layout_alignRight="@+id/uploadVideoImageView"
         android:background="@drawable/circular_image_bg"
         android:scaleType="center"
         android:src="@drawable/ic_write_white"
@@ -81,12 +51,12 @@
         android:id="@+id/writeArticleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/uploadVideoImageView"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="80dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
         android:layout_marginTop="10dp"
         android:text="@string/add_article_or_video.write_article"
         android:textColor="@color/white"
@@ -98,28 +68,56 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_above="@+id/becomeBloggerTextView"
-        android:layout_alignEnd="@+id/becomeBloggerTextView"
-        android:layout_alignRight="@+id/becomeBloggerTextView"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_alignEnd="@+id/uploadVideoImageView"
+        android:layout_alignRight="@+id/uploadVideoImageView"
         android:background="@drawable/circular_image_bg"
         android:scaleType="center"
         android:src="@drawable/ic_become_a_bloger"
-        android:visibility="invisible" />
+        android:visibility="invisible"  />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/becomeBloggerTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/uploadVideoImageView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/add_article_or_video.become_blogger"
+        android:textColor="@color/white"
+        android:visibility="invisible"
+        app:fontName="oswald.ttf" />
+
+    <ImageView
+        android:id="@+id/uploadVideoImageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_above="@+id/uploadVideoTextView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="48dp"
+        android:layout_marginRight="48dp"
+        android:background="@drawable/circular_image_bg"
+        android:scaleType="center"
+        android:src="@drawable/ic_ulpload_video_icon" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/uploadVideoTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="80dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:layout_marginTop="10dp"
-        android:text="@string/add_article_or_video.become_blogger"
+        android:gravity="center"
+        android:text="@string/add_article_or_video.upload_video"
         android:textColor="@color/white"
-        android:visibility="invisible"
         app:fontName="oswald.ttf" />
+
 </RelativeLayout>
